# daulingo

./: .gitignore  README.md  pyproject.toml
resources/inputs/: activity.csv
resources/outputs/: MoM_retention_rates.csv
scripts/: 0_create_tables.py  1_upload_data.py  2_compute_user_state_daily.py  3_inspect_user_state_daily.py  4_compute_retention_rates.py  _generate_fake_activity_data.py  consts.py  run.sh  run_backend.py  run_frontend.py  upload_activity_csv.py
src/backend/: config.py  dependencies.py  main.py  utils.py
src/backend/api/: health.py
src/backend/api/v1/: compute.py  meta.py  record.py  timeseries.py
src/backend/domain/: enums.py  models.py  tables.py
src/backend/infra/: database.py
src/backend/repositories/: dim_user_repo.py  fact_activity_repo.py  user_state_daily_repo.py  user_states.py
src/backend/services/: ingest_activity.py  io.py  timeseries.py  user_state_service.py
src/daulingo/: classifier.py  compute_user_state_daily.py  ingest_activity.py  io.py
src/daulingo/internal/: tables.py
src/frontend/: app.py  charts.py  config.py  data_client.py  tables.py  ui.py  view.py
