[project]
name = "daulingo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.116.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
    "xlsxwriter>=3.2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
